<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yamba</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="status_update">Status Update</string>
    <string name="button_update">Update!</string>
    <string name="start_service">Start </string>
    <string name="stop_service">Stop </string>
    <string name="refresh">Refresh</string>
    <string name="username_title">Username</string>
    <string name="username_summary">Enter Your Login Username</string>
    <string name="password_summary">Enter Your Password</string>
    <string name="password_title">password</string>
    <string name="server_summary">Enter Your Server API</string>
    <string name="server_title">Server</string>
    <string name="preferences">Preferences</string>
    <string name="delay_title">Delay</string>
    <string name="delay_summary">How Frequently Do You Want To Check For Updates</string>

    <string-array name="delayEntities">
        <item>Every Minute</item>
        <item>Every 5 Minutes </item>
        <item>Every Half Hour</item>
        <item>Every Hour</item>
    </string-array>
    <string-array name="delayValues">
        <item>60</item>
        <item>300</item>
        <item>1800</item>
        <item>3600</item>
    </string-array>
        <string name="title_timeline">Timeline</string>
        <string name="timeline">Timeline</string>

</resources>