<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <EditTextPreference
        android:key="username"
        android:summary="@string/username_summary"
        android:title="@string/username_title" >
    </EditTextPreference>
    <EditTextPreference
        android:key="password"
        android:password="true"
        android:summary="@string/password_summary"
        android:title="@string/password_title" >
    </EditTextPreference>
    <EditTextPreference
        android:key="apiRoot"
        android:summary="@string/server_summary"
        android:title="@string/server_title" >
    </EditTextPreference>
    <ListPreference android:title="@string/delay_title" android:summary="@string/delay_summary" android:key="delay" android:entries="@array/delayEntities" android:entryValues="@array/delayValues"/>

</PreferenceScreen>